# sparkle

./: bench-cluster.sh  bench.sh  docker-image.nix  stack.yaml
apps/lda/: SparkLDA.hs
apps/micro/: micro.cabal  pom.xml
apps/micro/src/: Main.hs
apps/micro/src/main/java/: Micro.java
apps/zero/: README.md  zero.cabal
apps/zero/src/: Main.hs
apps/zero/src/main/java/: Zero.java
inline-java/src/Foreign/JNI/: Types.hs
src/Control/Distributed/Spark/: Closure.hs  RDD.hs
